# LargeTextAnalysis

./: .gitignore  CMakeLists.txt  README.md
LargeTextAnalysis/: CMakeLists.txt  out.txt
LargeTextAnalysis/src/: LargeTextAnalysis.cpp  LargeTextAnalysis.h
lib/bcppul/include/bcppul/: bcppul.h  bcppul_expimp.h  file_utils.h  string_utils.h  timer.h  version_config.h
lib/bcppul/lib/: bcppul_static_debug.lib  bcppul_static_release.lib
texts/: text.txt
